# air-filter-upgrade

./: README.md  devenv.nix  flake.nix
.github/workflows/: control.yml  firmware.yml  formatting.yml
cad/: filter_panel.scad  sensor_mount.scad
control/: README.md
control/configs/: ms-air-filters.toml
control/extra/: ms-air-filter-control.service  ms-air-filter-control.toml
control/src/: air_filter.rs  main.rs
control/src/sensor/: air_quality.rs  mod.rs  presence.rs
control/src/zone/: control_logic.rs  mod.rs
firmware/: Cargo.toml  build.rs  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/configs/: south-basement-workshop.toml  test.toml
firmware/src/: buttons.rs  fan.rs  main.rs  maybe_timer.rs  presence_sensors.rs  run_logic.rs  temperature_sensors.rs  ui_buttons.rs  wifi.rs
firmware/src/display/: mod.rs  no_cs.rs
firmware/src/display/drawables/: boot_screen.rs  main_screen.rs  mod.rs
firmware/src/run_logic/: manual_button_trigger.rs  mod.rs
sensors/: north-basement.yaml  south-basement.yaml
