[package]
name = "ms-air-filter-firmware"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2021"
license = "MIT"

[features]
panic-probe = ["dep:panic-probe"]

[dependencies]
cortex-m-rt = "0.7.3"
embassy-rp = { version = "0.3.1", features = ["rp2040", "defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
pico-plc-bsp = { git = "https://github.com/DanNixon/pico-plc" }
assign-resources = "0.4.1"

embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }

defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"], optional = true }

embassy-sync = "0.6.0"
embassy-futures = "0.1.1"
portable-atomic = { version = "1.9.0", features = ["critical-section"] }
static_cell = "2.1.0"

embedded-hal = "1.0.0"
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }

# Temperature sensors
ds18b20 = "0.1.1"

# Display
mipidsi = "0.9.0"
embedded-graphics = "0.8.1"
u8g2-fonts = { version = "0.5.2", features = ["embedded_graphics_textstyle"] }

heapless = "0.8.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
unused_crate_dependencies = "deny"
